--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -5396,3 +5396,180 @@ var coinChange = function(coins, amount) {
 时间复杂度：O(Sn)O(Sn)，其中 SS 是金额，nn 是面额数。我们一共需要计算 O(S)O(S) 个状态，SS 为题目所给的总金额。对于每个状态，每次需要枚举 nn 个面额来转移状态，所以一共需要 O(Sn)O(Sn) 的时间复杂度。
 空间复杂度：O(S)O(S)。数组 \textit{dp}dp 需要开长度为总金额 SS 的空间。
 
+
+
+----
+
+## **BM71** **最长上升子序列(一)**
+
+给你一个整数数组 nums ，找到其中最长严格递增子序列的长度。
+
+子序列 是由数组派生而来的序列，删除（或不删除）数组中的元素而不改变其余元素的顺序。例如，[3,6,2,7] 是数组 [0,3,1,6,2,2,7] 的子序列。
+
+**进阶：**
+
+- 你能将算法的时间复杂度降低到 `O(n log(n))` 吗?
+
+
+
+#### 动态规划
+
+![最长上升子序列动态规划](E:\pogject\学习笔记\image\niuke\最长上升子序列动态规划.png)
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var lengthOfLIS = function(nums) {
+	if (nums.length === 0) {
+		return 0;
+	}
+	const n = nums.length;
+	const dp = new Array(n).fill(1);
+
+	let ans = 1;
+	for (let i = 1; i < n; i++) {
+		for (let j = 0; j < i; j++) {
+			if (nums[j] < nums[i]) {
+				dp[i] = Math.max(dp[i], dp[j] + 1);
+			}
+		}
+		ans = Math.max(ans, dp[i]);
+	}
+	return ans;
+};
+
+let nums = [10,9,2,5,3,7,101,18];
+console.log(lengthOfLIS(nums))
+
+```
+
+
+
+#### 贪心 + 二分查找
+
+![最长上升子序列贪心二分查找](E:\pogject\学习笔记\image\niuke\最长上升子序列贪心二分查找.png)
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var lengthOfLIS = function(nums) {
+	if (nums.length === 0) {
+		return 0;
+	}
+	const n = nums.length;
+	const dp = new Array(n + 1).fill(0);
+	let len = 1;
+	dp[len] = nums[0];
+
+	for (let i = 1; i < n; i++) {
+		if (nums[i] > dp[len]) {
+			dp[++len] = nums[i];
+		} else {
+			// 如果找不到说明所有的数都比 nums[i] 大，此时要更新 d[1]，所以这里将 pos 设为 0
+			let left = 1, right = len, pos = 0;
+			while (left <= right) {
+				const mid = (left + right) >> 1;
+				if (dp[mid] < nums[i]) {
+					pos = mid;
+					left = mid + 1;
+				} else {
+					right = mid - 1;
+				}
+			}
+			dp[pos + 1] = nums[i];
+		}
+	}
+	return len;
+};
+
+let nums = [10,9,2,5,3,7,101,18];
+console.log(lengthOfLIS(nums))
+
+```
+
+时间复杂度：O(n\log n)O(nlogn)。数组 \textit{nums}nums 的长度为 nn，我们依次用数组中的元素去更新 dd 数组，而更新 dd 数组时需要进行 O(\log n)O(logn) 的二分搜索，所以总时间复杂度为 O(n\log n)O(nlogn)。
+
+空间复杂度：O(n)O(n)，需要额外使用长度为 nn 的 dd 数组。
+
+
+
+----
+
+## **BM72** **连续子数组的最大和**
+
+输入一个整型数组，数组中的一个或连续多个整数组成一个子数组。求所有子数组的和的最大值。
+
+要求时间复杂度为O(n)。空间复杂度为(1)
+
+#### 动态规划
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var maxSubArray = function(nums) {
+    let ans = nums[0];
+    let sum = nums[0];
+    let n = nums.length;
+    for (let i = 1; i < n; i++) {
+        sum = Math.max(sum + nums[i], nums[i]);
+        ans = Math.max(ans, sum);
+    }
+    return ans;
+};
+```
+
+
+
+#### 分治
+
+
+
+```js
+function Status(l, r, m, i) {
+    this.lSum = l;
+    this.rSum = r;
+    this.mSum = m;
+    this.iSum = i;
+}
+
+const pushUp = (l, r) => {
+    const iSum = l.iSum + r.iSum;
+    const lSum = Math.max(l.lSum, l.iSum + r.lSum);
+    const rSum = Math.max(r.rSum, r.iSum + l.rSum);
+    const mSum = Math.max(Math.max(l.mSum, r.mSum), l.rSum + r.lSum);
+    return new Status(lSum, rSum, mSum, iSum);
+}
+
+const getInfo = (a, l, r) => {
+    if (l === r) {
+        return new Status(a[l], a[l], a[l], a[l]);
+    }
+    const m = (l + r) >> 1;
+    const lSub = getInfo(a, l, m);
+    const rSub = getInfo(a, m + 1, r);
+    return pushUp(lSub, rSub);
+}
+
+var maxSubArray = function(nums) {
+    return getInfo(nums, 0, nums.length - 1).mSum;
+};
+
+
+```
+
+
+
+----
+
+## **BM73** **最长回文子串**
+
+给你一个字符串 `s`，找到 `s` 中最长的回文子串。
+
+进阶: 空间复杂度 O(n)，时间复杂度 O(n)
+
