--- a/面试学习题目/前端面试_10_前端数据请求.md
+++ b/面试学习题目/前端面试_10_前端数据请求.md
@@ -745,3 +745,216 @@ b、写法更加简洁方便
 
 ----
 
+## axios前端加密通讯的处理
+
+因为安全的要求，所以我们要把前端所有的请求都得加密与服务端应用进行通讯，当然服务端的响应也是加密的，前端也需要对应得解密。
+
+与后端接口进行加密传参，接收参数。。。前端信息安全处理
+为什么要编码？
+
+由于一些网络通讯协议的限制, 又或者是出于信息加密的目的, 我们就需要将原信息转换为base64编码,然后才能进行传输.例如，发送某些含有 ASCII 码表中0到31之间的控制字符的数据。
+
+window.btoa 对字符串进行 base64编码（注意不能编码中文）;
+winodw.atob 对 base64字符串 进行解码（对于包含中文的 base64编码，不能正确解码）;
+
+AES 加密 —安装：
+
+```
+npm install crypto-js
+```
+
+aes加密: crypto.js
+
+```js
+ import CryptoJS from "crypto-js";
+ let CryptoJSKey = '0fHBHGFCRFFG1e25se' //16位自定义的，要与后端一起配置
+ const key = CryptoJS.enc.Utf8.parse(CryptoJSKey); 
+ const iv = CryptoJS.enc.Utf8.parse(CryptoJSKey);
+ //AES加密传参 （封装）
+ Encrypt(word) {
+    let srcs = CryptoJS.enc.Utf8.parse(word);//需要加密的内容
+   // let encrypted = CryptoJS.AES.encrypt(srcs, key, {
+  //   iv: iv,
+  //   mode: CryptoJS.mode.CBC,
+  //   padding: CryptoJS.pad.Pkcs7
+  // });
+    
+    if (typeof word == "string") {
+      const srcs = CryptoJS.enc.Utf8.parse(word);
+      encrypted = CryptoJS.AES.encrypt(srcs, key, {
+        iv: iv,
+        mode: CryptoJS.mode.CBC,
+        padding: CryptoJS.pad.Pkcs7
+      });
+    } else if (typeof word == "object") {
+      //对象格式的转成json字符串
+      const data = JSON.stringify(word);
+      const srcs = CryptoJS.enc.Utf8.parse(data);
+      encrypted = CryptoJS.AES.encrypt(srcs, key, {
+        iv: iv,
+        mode: CryptoJS.mode.CBC,
+        padding: CryptoJS.pad.Pkcs7
+      });
+    }
+    return encrypted.ciphertext.toString()
+  },
+
+```
+
+```js
+ // aes解密
+  decrypt(word) {
+    const encryptedHexStr = CryptoJS.enc.Hex.parse(word);
+    const srcs = CryptoJS.enc.Base64.stringify(encryptedHexStr);
+    const decrypt = CryptoJS.AES.decrypt(srcs, key, {
+      iv: iv,
+      mode: CryptoJS.mode.CBC,
+      padding: CryptoJS.pad.Pkcs7
+    });
+    const decryptedStr = decrypt.toString(CryptoJS.enc.Utf8);
+    return decryptedStr.toString();
+  }
+};
+
+```
+
+```js
+//在发送方和接收方共享机密密钥的前提下，HMAC 可用于确定通过不安全信道发送的消息是否已被篡改。
+//发送方计算原始数据的哈希值，并将原始数据和哈希值放在一个消息中同时传送。
+//接收方重新计算所接收消息的哈希值，并检查计算所得的 HMAC 是否与传送的 HMAC 匹配。
+//因为更改消息和重新生成正确的哈希值需要密钥，所以对数据或哈希值的任何更改都会导致不匹配。
+//因此，如果原始的哈希值与计算得出的哈希值相匹配，则消息通过身份验证。
+
+//MD5（消息摘要算法 5）是 RSA Laboratories 开发的加密哈希算法。HMACMD5 接受任何大小的密钥，并生成长度为 128 位的哈希序列。
+ // HmacMD5加密
+  HMACShaEncrypt(word) {
+    let key = CryptoJSKey;
+    return CryptoJS.HmacMD5(word, key).toString().toUpperCase()
+  },
+
+```
+
+```js
+//时间,按需求传给后端
+  getTimeStamp(time) {
+    let y = time.getFullYear()
+    let m = time.getMonth() + 1
+    let d = time.getDate()
+    let h = time.getHours()
+    let min = time.getMinutes()
+    let s = time.getSeconds()
+    return y + (m > 9 ? m : "0" + m) + (d > 9 ? d : "0" + d) + (h > 9 ? h : "0" + h) + (min > 9 ? min : "0" + min) + (s > 9 ? s : "0" + s)
+  },
+
+```
+
+
+
+### 拦截器InterceptorManager
+
+遇见这个需求，或许从axios文档中，我们第一时间想到的就是InterceptorManager。
+
+```js
+axios.interceptors.request.use(req => {
+  // todo 加密
+})
+axios.interceptors.response.use(rsp => {
+  // todo 解密
+})
+```
+
+但是现在需求升级了，我们要求前端根据服务端的响应状态码自动切换加密或者明文通迅。
+
+### 代理axios.request方法。
+
+可以实现，但是还是略为复杂。
+
+```js
+import Axios from 'axios/lib/core/Axios'
+import axiosBind from 'axios/lib/helpers/bind'
+import axiosUtils from 'axios/lib/utils'
+
+// todo 导入 加密的securityAxios, 正常的defaultAxios。
+// todo 导入 全局变量isSecurity控制是否需要加密
+
+async function requestProxy(...args) {
+    if(isSecurity){
+        return await securityAxios.request(...args)
+    }
+    return await defaultAxios.request(...args)
+}
+function createInstance(defaultConfig) {
+    const context = new Axios(defaultConfig);
+    Object.defineProperty(context, 'defaults', {
+        get() {
+            return isSecurity ? securityAxios.defaults : defaultAxios.defaults;
+        },
+    })
+    context.request = requestProxy;
+
+    var instance = axiosBind(requestProxy, context);
+    axiosUtils.extend(instance, Axios.prototype, context);
+    axiosUtils.extend(instance, context);
+
+    return instance;
+}
+
+const axiosInstance = createInstance();
+axiosInstance.axios = axiosInstance;
+
+export default axiosInstance;
+
+```
+
+
+
+### 包装自定义的fetch方法
+
+```js
+export function fetch(...args){
+  if(isSecurity){
+    return securityAxios(...args);
+  }
+  return defaultAxios(...args);
+}
+```
+
+
+
+### 自定义Adapter
+
+```js
+import axios from 'axios'
+
+export default ((defaultAdapter) => {
+  function security(cfg){
+    // todo 构建新的加密后的config;
+    return newCfg;
+  }
+  function unsecurity(rsp){
+    // todo 解密返回的加密串；
+    return newRsp;
+  }
+  return function securityAdapter(config){
+    const securityConfig = security(config)
+    const resp = defaultAdapter(securityConfig)
+    return unsecurity(resp)
+  }
+})(axios.default.adapter)
+
+```
+
+```js
+import securityAdapter from './securityAdapter'
+const securityAdapter = axios.create({
+  adapter: securityAdapter,
+})
+// todo
+```
+
+以上几种方式，都是我实际项目中，遇见的实现方式，或是自己的处理方式。
+
+方法一，不够解藕，拦截器很容易过于复杂；
+方法二，过于繁所；
+方法三，需要修改现有的代码；
+方法四，暂时来看是最合适的
