--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -5573,3 +5573,121 @@ var maxSubArray = function(nums) {
 
 进阶: 空间复杂度 O(n)，时间复杂度 O(n)
 
+#### 动态规划
+
+![最长回文子串(动态规划)](E:\pogject\学习笔记\image\leetcode\最长回文子串(动态规划).png)
+
+```js
+/**
+ * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+ *
+ * 
+ * @param A string字符串 
+/**
+ * @param {string} s
+ * @return {string}
+ */
+var longestPalindrome  =  function(s) {
+    const n = s.length;
+    if (n < 2) {
+        return s;
+    }
+
+    let maxLen = 1;
+    let begin = 0;
+    const dp = new Array(n).fill(0).map(() => new Array(n).fill(false));
+    //dp[i][j] 表示 s[i..j] 是否是回文串
+    for (let i = 0; i < n; i++){
+        /// 初始化：所有长度为 1 的子串都是回文串
+        dp[i][i] = true;
+    }
+
+    // 递推开始, 先枚举子串长度
+    for(let L = 2; L <= n; L++){
+        // 枚举左边界，左边界的上限设置可以宽松一些
+        for(let i = 0; i < n; i++){
+            // 由 L 和 i 可以确定右边界，即 j - i + 1  =  L 得
+            let j = L + i - 1;
+            if (j >= n) {
+                // 如果右边界越界，就可以退出当前循环
+                break;
+            }
+            if (s[i] !== s[j]) {
+                dp[i][j] = false;
+            } else {
+                if (j - i < 3) {
+                    dp[i][j] = true;
+                } else {
+                    dp[i][j] = dp[i + 1][j - 1];
+                }
+            }
+            // 只要 dp[i][L]  =  =  true 成立，就表示子串 s[i..L] 是回文，此时记录回文长度和起始位置
+            if (dp[i][j] && j - i + 1 > maxLen) {
+                maxLen = j - i + 1;
+                begin = i;
+            }
+        }
+    }
+
+    return s.slice(begin, begin + maxLen);
+};
+```
+
+
+
+#### 中心扩展算法
+
+![最长回文子串(中心扩展算法)](E:\pogject\学习笔记\image\leetcode\最长回文子串(中心扩展算法).png)
+
+```js
+/**
+ * @param {string} s
+ * @return {string}
+ */
+var longestPalindrome = function(s) {
+    let n = s.length;
+    if (n < 2) {
+        return s;
+    }
+
+    let start = 0,end = 0;
+    let len1, len2, len;
+    for (let i = 0; i < n; i++){
+        len1 = expandAroundCenter(s, i, i);
+        len2 = expandAroundCenter(s, i, i + 1);
+        len = Math.max(len1, len2);
+        console.log(start, end);
+        if (len > end - start) {
+            start = i - Math.floor((len - 1) / 2);
+            end = i + Math.floor(len / 2);
+        }
+    }
+    return s.slice(start, end + 1);
+};
+
+var expandAroundCenter=function(s, left, right){
+    while(left >= 0 && right < s.length && s[left] === s[right]){
+        left--;
+        right++;
+    }
+    return right - left - 1;
+}
+
+
+let str1 = "cbbd";
+let result=longestPalindrome(str1);
+console.log(result);
+```
+
+复杂度分析
+
+时间复杂度：O(n^2)O(n 2 )，其中 nn 是字符串的长度。长度为 11 和 22 的回文中心分别有 nn 和 n-1n−1 个，每个回文中心最多会向外扩展 O(n)O(n) 次。
+
+空间复杂度：O(1)O(1)。
+
+
+
+----
+
+## **BM74** **数字字符串转化成IP地址**
+
