--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -5691,3 +5691,576 @@ console.log(result);
 
 ## **BM74** **数字字符串转化成IP地址**
 
+给定一个只包含数字的字符串 s ，用以表示一个 IP 地址，返回所有可能从 s 获得的 有效 IP 地址 。你可以按任何顺序返回答案。
+
+有效 IP 地址 正好由四个整数（每个整数位于 0 到 255 之间组成，且不能含有前导 0），整数之间用 '.' 分隔。
+
+例如："0.1.2.201" 和 "192.168.1.1" 是 有效 IP 地址，但是 "0.011.255.245"、"192.168.1.312" 和 "192.168@1.1" 是 无效 IP 地址。
+
+
+
+#### 回溯
+
+由于我们需要找出所有可能复原出的 IP 地址，因此可以考虑使用回溯的方法，对所有可能的字符串分隔方式进行搜索，并筛选出满足要求的作为答案。
+
+设题目中给出的字符串为 ss。我们用递归函数 \textit{dfs}(\textit{segId}, \textit{segStart})dfs(segId,segStart) 表示我们正在从 s[\textit{segStart}]s[segStart] 的位置开始，搜索 IP 地址中的第 \textit{segId}segId 段，其中 \textit{segId} \in \{0, 1, 2, 3\}segId∈{0,1,2,3}。由于 IP 地址的每一段必须是 [0, 255][0,255] 中的整数，因此我们从 \textit{segStart}segStart 开始，从小到大依次枚举当前这一段 IP 地址的结束位置 \textit{segEnd}segEnd。如果满足要求，就递归地进行下一段搜索，调用递归函数 \textit{dfs}(\textit{segId} + 1, \textit{segEnd} + 1)dfs(segId+1,segEnd+1)。
+
+特别地，由于 IP 地址的每一段不能有前导零，因此如果 s[\textit{segStart}]s[segStart] 等于字符 00，那么 IP 地址的第 \textit{segId}segId 段只能为 00，需要作为特殊情况进行考虑。
+
+在搜索的过程中，如果我们已经得到了全部的 44 段 IP 地址（即 \textit{segId} = 4segId=4），并且遍历完了整个字符串（即 \textit{segStart} = |s|segStart=∣s∣，其中 |s|∣s∣ 表示字符串 ss 的长度），那么就复原出了一种满足题目要求的 IP 地址，我们将其加入答案。在其它的时刻，如果提前遍历完了整个字符串，那么我们需要结束搜索，回溯到上一步。
+
+```js
+/**
+ * @param {string} s
+ * @return {string[]}
+ */
+var restoreIpAddresses = function(s) {
+  const n = s.length;
+  const SEG_COUNT = 4;
+  const segments = new Array(SEG_COUNT);
+
+  const ans = [];
+
+  const dfs = (s, segId, segStart) => {
+    // 如果找到了 4 段 IP 地址并且遍历完了字符串，那么就是一种答案
+    if (segId === SEG_COUNT) {
+      if (segStart === n) {
+        ans.push(segments.join("."));
+      }
+      return;
+    }
+
+    // 如果还没有找到 4 段 IP 地址就已经遍历完了字符串，那么提前回溯
+    if (segStart === n) {
+      return;
+    }
+
+    // 由于不能有前导零，如果当前数字为 0，那么这一段 IP 地址只能为 0
+    if (s[segStart] === "0") {
+      segments[segId] = 0;
+      dfs(s, segId + 1, segStart + 1);
+    }
+
+    // 一般情况，枚举每一种可能性并递归
+    let addr = 0;
+    for (let segEnd = segStart; segEnd < n; segEnd++) {
+      addr = addr * 10 + (s[segEnd] - '0');
+      if (addr > 0 && addr <= 255) {
+        segments[segId] = addr;
+        dfs(s, segId + 1, segEnd + 1);
+      } else {
+        break;
+      }
+    }
+  }
+
+  dfs(s, 0, 0);
+  return ans;
+};
+
+let s = "25525511135";
+console.log(restoreIpAddresses(s));
+```
+
+
+
+
+
+----
+
+## **BM75** **编辑距离(一)**
+
+给你两个单词 word1 和 word2， 请返回将 word1 转换成 word2 所使用的最少操作数  。
+
+你可以对一个单词进行如下三种操作：
+
+插入一个字符
+删除一个字符
+替换一个字符
+
+**提示：**
+
+- `0 <= word1.length, word2.length <= 500`
+- `word1` 和 `word2` 由小写英文字母组成
+
+
+
+#### 动态规划
+
+编辑距离算法被数据科学家广泛应用，是用作机器翻译和语音识别评价标准的基本算法。
+
+最直观的方法是暴力检查所有可能的编辑方法，取最短的一个。所有可能的编辑方法达到指数级，但我们不需要进行这么多计算，因为我们只需要找到距离最短的序列而不是所有可能的序列。
+
+我们可以对任意一个单词进行三种操作：
+
+- 插入一个字符；
+
+- 删除一个字符；
+
+- 替换一个字符。
+
+
+题目给定了两个单词，设为 A 和 B，这样我们就能够六种操作方法。
+
+但我们可以发现，如果我们有单词 A 和单词 B：
+
+- 对单词 A 删除一个字符和对单词 B 插入一个字符是等价的。例如当单词 A 为 doge，单词 B 为 dog 时，我们既可以删除单词 A 的最后一个字符 e，得到相同的 dog，也可以在单词 B 末尾添加一个字符 e，得到相同的 doge；
+
+- 同理，对单词 B 删除一个字符和对单词 A 插入一个字符也是等价的；
+
+- 对单词 A 替换一个字符和对单词 B 替换一个字符是等价的。例如当单词 A 为 bat，单词 B 为 cat 时，我们修改单词 A 的第一个字母 b -> c，和修改单词 B 的第一个字母 c -> b 是等价的。
+
+
+这样以来，本质不同的操作实际上只有三种：
+
+- 在单词 A 中插入一个字符；
+
+- 在单词 B 中插入一个字符；
+
+- 修改单词 A 的一个字符。
+
+
+这样以来，我们就可以把原问题转化为规模较小的子问题。
+
+我们用 A = horse，B = ros 作为例子，来看一看是如何把这个问题转化为规模较小的若干子问题的。
+
+- 在单词 A 中插入一个字符：如果我们知道 horse 到 ro 的编辑距离为 a，那么显然 horse 到 ros 的编辑距离不会超过 a + 1。这是因为我们可以在 a 次操作后将 horse 和 ro 变为相同的字符串，只需要额外的 1 次操作，在单词 A 的末尾添加字符 s，就能在 a + 1 次操作后将 horse 和 ro 变为相同的字符串；
+
+- 在单词 B 中插入一个字符：如果我们知道 hors 到 ros 的编辑距离为 b，那么显然 horse 到 ros 的编辑距离不会超过 b + 1，原因同上；
+
+- 修改单词 A 的一个字符：如果我们知道 hors 到 ro 的编辑距离为 c，那么显然 horse 到 ros 的编辑距离不会超过 c + 1，原因同上。
+
+
+那么从 horse 变成 ros 的编辑距离应该为 min(a + 1, b + 1, c + 1)。
+
+注意：为什么我们总是在单词 A 和 B 的末尾插入或者修改字符，能不能在其它的地方进行操作呢？答案是可以的，但是我们知道，操作的顺序是不影响最终的结果的。例如对于单词 cat，我们希望在 c 和 a 之间添加字符 d 并且将字符 t 修改为字符 b，那么这两个操作无论为什么顺序，都会得到最终的结果 cdab。
+
+你可能觉得 horse 到 ro 这个问题也很难解决。但是没关系，我们可以继续用上面的方法拆分这个问题，对于这个问题拆分出来的所有子问题，我们也可以继续拆分，直到：
+
+- 字符串 A 为空，如从 转换到 ro，显然编辑距离为字符串 B 的长度，这里是 2；
+
+- 字符串 B 为空，如从 horse 转换到 ，显然编辑距离为字符串 A 的长度，这里是 5。
+
+
+因此，我们就可以使用动态规划来解决这个问题了。我们用 D[i][j] 表示 A 的前 i 个字母和 B 的前 j 个字母之间的编辑距离。
+
+如上所述，当我们获得 D[i][j-1]，D[i-1][j] 和 D[i-1][j-1] 的值之后就可以计算出 D[i][j]。
+
+- D[i][j-1] 为 A 的前 i 个字符和 B 的前 j - 1 个字符编辑距离的子问题。即对于 B 的第 j 个字符，我们在 A 的末尾添加了一个相同的字符，那么 D[i][j] 最小可以为 D[i][j-1] + 1；
+
+- D[i-1][j] 为 A 的前 i - 1 个字符和 B 的前 j 个字符编辑距离的子问题。即对于 A 的第 i 个字符，我们在 B 的末尾添加了一个相同的字符，那么 D[i][j] 最小可以为 D[i-1][j] + 1；
+
+- D[i-1][j-1] 为 A 前 i - 1 个字符和 B 的前 j - 1 个字符编辑距离的子问题。即对于 B 的第 j 个字符，我们修改 A 的第 i 个字符使它们相同，那么 D[i][j] 最小可以为 D[i-1][j-1] + 1。特别地，如果 A 的第 i 个字符和 B 的第 j 个字符原本就相同，那么我们实际上不需要进行修改操作。在这种情况下，D[i][j] 最小可以为 D[i-1][j-1]。
+
+
+那么我们可以写出如下的状态转移方程：
+
+若 A 和 B 的最后一个字母相同：
+
+```js
+
+D[i][j] = min(D[i][j−1]+1,D[i−1][j]+1,D[i−1][j−1]) = 1+min(D[i][j−1],D[i−1][j],D[i−1][j−1]−1)
+```
+
+ 
+
+若 A 和 B 的最后一个字母不同：
+
+```js
+D[i][j]=1+min(D[i][j−1],D[i−1][j],D[i−1][j−1])
+```
+
+对于边界情况，一个空串和一个非空串的编辑距离为 D[i][0] = i 和 D[0][j] = j，D[i][0] 相当于对 word1 执行 i 次删除操作，D[0][j] 相当于对 word1执行 j 次插入操作。
+
+```js
+/**
+ * @param {string} word1
+ * @param {string} word2
+ * @return {number}
+ */
+var minDistance = function(word1, word2) {
+  const n = word1.length, m = word2.length;
+
+  // 有一个字符串为空串
+  if (m * n === 0) {
+    return m + n;
+  }
+
+  const dp = new Array(n + 1).fill(0).map(() => new Array(m + 1));
+
+  // 边界状态初始化
+  for (let i = 0; i < n + 1; i++) {
+    dp[i][0] = i;
+  }
+  for (let i = 0; i < m + 1; i++) {
+    dp[0][i] = i;
+  }
+
+  // 计算所有 DP 值
+  for (let i = 1; i < n + 1; i++) {
+    for (let j = 1; j < m + 1; j++) {
+      let left = dp[i - 1][j] + 1;
+      let down = dp[i][j - 1] + 1;
+      let left_down = dp[i - 1][j - 1];
+      if (word1[i - 1] !== word2[j - 1]) {
+        left_down += 1;
+      }
+      dp[i][j] = Math.min(left, down, left_down);
+    }
+  }
+  return dp[n][m];
+};
+
+let word1 = "intention", word2 = "execution";
+console.log(minDistance(word1, word2));
+```
+
+复杂度分析
+
+时间复杂度 ：O(mn)，其中 m 为 word1 的长度，n 为 word2 的长度。
+
+空间复杂度 ：O(mn)，我们需要大小为 O(mn) 的 D 数组来记录状态值。
+
+
+
+----
+
+## **BM76** **正则表达式匹配**
+
+给你一个字符串 s 和一个字符规律 p，请你来实现一个支持 '.' 和 '*' 的正则表达式匹配。
+
+'.' 匹配任意单个字符
+'*' 匹配零个或多个前面的那一个元素
+所谓匹配，是要涵盖 整个 字符串 s的，而不是部分字符串。
+
+
+
+提示：
+
+1 <= s.length <= 20
+1 <= p.length <= 30
+s 只包含从 a-z 的小写字母。
+p 只包含从 a-z 的小写字母，以及字符 . 和 *。
+保证每次出现字符 * 时，前面都匹配到有效的字符
+
+
+
+#### 直接调用正则方法
+
+```js
+/**
+ * @param {string} s
+ * @param {string} p
+ * @return {boolean}
+ */
+var isMatch = function(s, p) {
+    return new RegExp("^"+p+"$").test(s);
+};
+```
+
+
+
+#### 动态规划
+
+[题解](https://leetcode.cn/problems/regular-expression-matching/solution/zheng-ze-biao-da-shi-pi-pei-by-leetcode-solution/)
+
+```js
+/**
+ * @param {string} s
+ * @param {string} p
+ * @return {boolean}
+ */
+var isMatch = function(s, p) {
+  const m = s.length, n = p.length;
+  const dp = new Array(m + 1).fill(0).map(() => new Array(n + 1).fill(false));
+  dp[0][0] = true;
+
+  for (let i = 0; i <= m; i++) {
+    for (let j = 1; j <= n; j++) {
+      if (p[j - 1] === "*") {
+        dp[i][j] = dp[i][j - 2];
+        if (matches(s, p, i, j - 1)) {
+          dp[i][j] = dp[i][j] || dp[i - 1][j];
+        }
+      } else {
+        if (matches(s, p, i, j)) {
+          dp[i][j] = dp[i - 1][j - 1];
+        }
+      }
+    }
+  }
+  return dp[m][n]
+};
+
+const matches = (s, p, i, j) => {
+  if (i === 0) {
+    return false;
+  }
+  if (p[j - 1] === ".") {
+    return true;
+  }
+  return s[i - 1] === p[j - 1];
+}
+
+let s = "ab", p = ".*";
+console.log(isMatch(s, p));
+```
+
+
+
+
+
+----
+
+## **BM77** **最长的括号子串**
+
+给你一个只包含 `'('` 和 `')'` 的字符串，找出最长有效（格式正确且连续）括号子串的长度。
+
+**提示：**
+
+- `0 <= s.length <= 3 * 104`
+- `s[i]` 为 `'('` 或 `')'`
+
+
+
+#### 动态规划
+
+![有效括号子串动态规划](D:\project\学习笔记\image\niuke\有效括号子串动态规划.png)
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var longestValidParentheses = function(s) {
+  if (s.length < 2) {
+    return 0;
+  }
+  const n = s.length;
+  let ans = 0;
+  const dp = new Array(n).fill(0);
+  for (let i = 1; i < n; i++) {
+    if (s[i] === ")") {
+      if (s[i - 1] === "(") {
+        dp[i] = (i >= 2 ? dp[i - 2] : 0 ) + 2;
+      } else if (i - dp[i - 1] > 0 && s[i - dp[i - 1] - 1] === "(") {
+        dp[i] = dp[i - 1] + ((i - dp[i - 1]) >= 2 ? dp[i - dp[i - 1] - 2] : 0) + 2;
+      }
+      ans = Math.max(ans, dp[i]);
+    }
+  }
+  return ans;
+};
+
+let s = ")()())";
+console.log(longestValidParentheses(s));
+```
+
+
+
+#### 栈
+
+撇开方法一提及的动态规划方法，相信大多数人对于这题的第一直觉是找到每个可能的子串后判断它的有效性，但这样的时间复杂度会达到 O(n^3)，无法通过所有测试用例。但是通过栈，我们可以在遍历给定字符串的过程中去判断到目前为止扫描的子串的有效性，同时能得到最长有效括号的长度。
+
+具体做法是我们始终保持栈底元素为当前已经遍历过的元素中「最后一个没有被匹配的右括号的下标」，这样的做法主要是考虑了边界条件的处理，栈里其他元素维护左括号的下标：
+
+- 对于遇到的每个 ‘(’ ，我们将它的下标放入栈中
+
+- 对于遇到的每个 ‘)’ ，我们先弹出栈顶元素表示匹配了当前右括号：
+- - 如果栈为空，说明当前的右括号为没有被匹配的右括号，我们将其下标放入栈中来更新我们之前提到的「最后一个没有被匹配的右括号的下标」
+  - 如果栈不为空，当前右括号的下标减去栈顶元素即为「以该右括号为结尾的最长有效括号的长度」
+
+我们从前往后遍历字符串并更新答案即可。
+
+需要注意的是，如果一开始栈为空，第一个字符为左括号的时候我们会将其放入栈中，这样就不满足提及的「最后一个没有被匹配的右括号的下标」，为了保持统一，我们在一开始的时候往栈中放入一个值为 -1 的元素。
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var longestValidParentheses = function(s) {
+  if (s.length < 2) {
+    return 0;
+  }
+  const n = s.length;
+  let ans = 0;
+  const stack = [-1];
+  for (let i = 0; i < n; i++) {
+    if (s[i] === "(") {
+      stack.push(i);
+    } else {
+      stack.pop();
+      if (stack.length === 0) {
+        stack.push(i);
+      } else {
+        ans = Math.max(ans, i - stack[stack.length - 1]);
+      }
+    }
+  }
+  return ans;
+};
+
+let s = ")()())";
+console.log(longestValidParentheses(s));
+```
+
+
+
+#### 不需要额外的空间
+
+在此方法中，我们利用两个计数器 \textit{left}left 和 \textit{right}right 。首先，我们从左到右遍历字符串，对于遇到的每个 \text{‘(’}‘(’，我们增加 \textit{left}left 计数器，对于遇到的每个 \text{‘)’}‘)’ ，我们增加 \textit{right}right 计数器。每当 \textit{left}left 计数器与 \textit{right}right 计数器相等时，我们计算当前有效字符串的长度，并且记录目前为止找到的最长子字符串。当 \textit{right}right 计数器比 \textit{left}left 计数器大时，我们将 \textit{left}left 和 \textit{right}right 计数器同时变回 00。
+
+这样的做法贪心地考虑了以当前字符下标结尾的有效括号长度，每次当右括号数量多于左括号数量的时候之前的字符我们都扔掉不再考虑，重新从下一个字符开始计算，但这样会漏掉一种情况，就是遍历的时候左括号的数量始终大于右括号的数量，即 (() ，这种时候最长有效括号是求不出来的。
+
+解决的方法也很简单，我们只需要从右往左遍历用类似的方法计算即可，只是这个时候判断条件反了过来：
+
+当 \textit{left}left 计数器比 \textit{right}right 计数器大时，我们将 \textit{left}left 和 \textit{right}right 计数器同时变回 00
+当 \textit{left}left 计数器与 \textit{right}right 计数器相等时，我们计算当前有效字符串的长度，并且记录目前为止找到的最长子字符串
+这样我们就能涵盖所有情况从而求解出答案。
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var longestValidParentheses = function(s) {
+  if (s.length < 2) {
+    return 0;
+  }
+  const n = s.length;
+  let ans = 0;
+  let left = 0, right = 0;
+
+  for (let i = 0; i < n; i++) {
+    if (s[i] === "(") {
+      left++;
+    } else {
+      right++;
+    }
+    if (left === right) {
+      ans = Math.max(ans, 2 * right);
+    } else if (right > left) {
+      left = right = 0;
+    }
+  }
+  left = right = 0;
+  for (let i = n - 1; i > 0; i--) {
+    if (s[i] === "(") {
+      left++;
+    } else {
+      right++;
+    }
+    if (left === right) {
+      ans = Math.max(ans, 2 * left);
+    } else if (right < left) {
+      left = right = 0;
+    }
+  }
+  return ans;
+};
+
+let s = ")()())";
+console.log(longestValidParentheses(s));
+```
+
+- 时间复杂度： O(n)*O*(*n*)，其中 n*n* 为字符串长度。我们只要正反遍历两边字符串即可。
+- 空间复杂度： O(1)*O*(1)。我们只需要常数空间存放若干变量。
+
+
+
+
+
+----
+
+## **BM78** **打家劫舍(一)**
+
+你是一个专业的小偷，计划偷窃沿街的房屋。每间房内都藏有一定的现金，影响你偷窃的唯一制约因素就是相邻的房屋装有相互连通的防盗系统，如果两间相邻的房屋在同一晚上被小偷闯入，系统会自动报警。
+
+给定一个代表每个房屋存放金额的非负整数数组，计算你 不触动警报装置的情况下 ，一夜之内能够偷窃到的最高金额。
+
+#### 动态规划
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var rob = function(nums) {
+  let p = 0;
+  let q = nums[0];
+  const n = nums.length;
+  let r = nums;;
+  for (let i = 1; i < n; i++) {
+    r = Math.max(p + nums[i], q);
+    p = q;
+    q = r;
+  }
+  return r;
+};
+
+let nums = [2,7,9,3,1];
+console.log(rob(nums));
+```
+
+
+
+----
+
+## **BM79** **打家劫舍(二)**
+
+你是一个专业的小偷，计划偷窃沿街的房屋，每间房内都藏有一定的现金。这个地方所有的房屋都 围成一圈 ，这意味着第一个房屋和最后一个房屋是紧挨着的。同时，相邻的房屋装有相互连通的防盗系统，如果两间相邻的房屋在同一晚上被小偷闯入，系统会自动报警 。
+
+给定一个代表每个房屋存放金额的非负整数数组，计算你 在不触动警报装置的情况下 ，今晚能够偷窃到的最高金额。
+
+#### 动态规划
+
+首先考虑最简单的情况。如果只有一间房屋，则偷窃该房屋，可以偷窃到最高总金额。如果只有两间房屋，则由于两间房屋相邻，不能同时偷窃，只能偷窃其中的一间房屋，因此选择其中金额较高的房屋进行偷窃，可以偷窃到最高总金额。
+
+注意到当房屋数量不超过两间时，最多只能偷窃一间房屋，因此不需要考虑首尾相连的问题。如果房屋数量大于两间，就必须考虑首尾相连的问题，第一间房屋和最后一间房屋不能同时偷窃。
+
+如何才能保证第一间房屋和最后一间房屋不同时偷窃呢？如果偷窃了第一间房屋，则不能偷窃最后一间房屋，因此偷窃房屋的范围是第一间房屋到最后第二间房屋；如果偷窃了最后一间房屋，则不能偷窃第一间房屋，因此偷窃房屋的范围是第二间房屋到最后一间房屋。
+
+假设数组 \textit{nums}nums 的长度为 nn。如果不偷窃最后一间房屋，则偷窃房屋的下标范围是 [0, n-2][0,n−2]；如果不偷窃第一间房屋，则偷窃房屋的下标范围是 [1, n-1][1,n−1]。在确定偷窃房屋的下标范围之后，即可用第 198 题的方法解决。对于两段下标范围分别计算可以偷窃到的最高总金额，其中的最大值即为在 nn 间房屋中可以偷窃到的最高总金额。
+
+
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var rob = function(nums) {
+  const n = nums.length;
+  if (n === 1) {
+    return nums[0];
+  } else if (n === 2) {
+    return Math.max(nums[0], nums[1]);
+  } else {
+    return Math.max(robRange(nums, 0, n - 2), robRange(nums, 1, n - 1));
+  }
+};
+
+const robRange = (nums, start, end) => {
+  let first = nums[start], second = Math.max(nums[start], nums[start + 1]);
+  for (let i = start + 2; i <= end; i++) {
+    const temp = second;
+    second = Math.max(first + nums[i], second);
+    first = temp;
+  }
+  return second;
+}
+
+let nums = [2,7,9,3,1];
+console.log(rob(nums));
+```
+
+
+
+
+
+
+
+----
+
+## [337. 打家劫舍 III](https://leetcode.cn/problems/house-robber-iii/)
