--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -1735,3 +1735,397 @@ var sleep = (delaytime = 1000) => {
 
 
 
+----
+
+## 8.30 天王星量化面试
+
+如何学习前端
+
+对量化的了解
+
+爱好和兴趣
+
+7L 和5L的杯子如何得到4L的杯子
+
+8个砝码有一个重一些，需要称几次可以找出重的那个
+
+
+
+----
+
+## 8.31 度小满
+
+
+
+现在一个数组被定义为好的，如果该数组中的最大值是最小值的k倍。
+
+现在给你一个数组，你的任务是计算有多少个子数组是好的。
+
+ 
+
+其中，子数组定义为原数组中一段连续的数组。
+
+例如：[4, 3, 2, 7]有以下几个子数组：
+
+[4], [4, 3], [4, 3, 2], [4, 3, 2, 7], [3], [3, 2], [3, 2, 7], [2], [2, 7], [7]
+
+ 
+
+当k = 2时，答案为1，只有[4, 3, 2]是好数组，它的最大值是4，最小值是2，满足题意。
+
+
+
+1<= n, k <= 1000
+
+对于全体数据都保证数组中的数字在[1, 1e9]范围内
+
+```js
+
+function solution(nums, n, k) {
+  if (nums.length < 1) {
+    return 0;
+  }
+  if (n < 1) {
+    return 0;
+  }
+  let ans = 0;
+  for (let i = 0; i < n; i++) {
+    let minValue = nums[i], maxValue = nums[i];
+    for (let j = i; j < n; j++) {
+  minValue = Math.min(minValue, nums[j]);
+  maxValue = Math.max(maxValue, nums[j]);
+  if (maxValue === minValue * k) {
+    ans++;
+  }
+  // console.log(maxValue, minValue)
+}
+  }
+  return ans;
+}
+
+// let nums = [4, 3, 2, 2, 7, 4];
+// console.log(solution(nums, 6, 2));
+
+let [n, k] = read_line().trim().split(" ").map(Number);
+let nums = read_line().trim().split(" ").map(Number);
+console.log(solution(nums, n, k))
+```
+
+
+
+
+
+
+现在有一个n行m列的网格图。每个格子上有一个数字，为 +k 或者 -k。
+
+初始你在位于左上方的第一行第一列，你的目标是走到位于右下方的第n行第m列。
+
+现在限制你每一步只能向下或者向右走。显然，你有很多种实现目标的方法。
+
+现在，我们定义路径的权值和为你选定的路径上所有格子上的数字的加和。
+
+我们的问题是，你能否选出一条合适的路径，使得你获得恰好为x的权值和。
+
+  1 <= n, m <= 10 
+
+  对全体数据保证：1 <= T <= 5, 0 <= k <= 10, 0 <= x <= 1000000
+
+```js
+function solution(m, n, k, x) {
+  if (m < 1 || n < 1) {
+    return "no";
+  }
+  if (x > m * n * k) {
+    return "no";
+  }
+  if (k === 0 && x === 0) {
+    return "yes";
+  }
+  if (k === 0 && x !== 0) {
+    return "no";
+  }
+  const grid = new Array(m);
+
+  for (let i = 0; i < m; i++) {
+    grid[i] = read_line().trim().split(" ").map(Number);
+  }
+  let flag = false;
+
+  const backtrack = (row, col, sum) => {
+    if (flag) {
+      return;
+    }
+    sum += grid[row][col];
+    if (row === m - 1 && col === n - 1) {
+      if (sum === x) {
+        flag = true;
+      }
+    }
+    if (row + 1 < m) {
+      backtrack(row + 1, col, sum);
+    }
+    if (col + 1 < n) {
+      backtrack(row, col + 1, sum)
+    }
+  }
+
+  backtrack(0, 0, 0);
+
+  return flag ? "yes" : "no";
+}
+
+
+
+let T = parseInt(read_line().trim());
+while (T > 0) {
+  T--;
+  let [m, n, k, x] = read_line().trim().split(" ").map(Number);
+  console.log(solution(m, n, k, x));
+}
+```
+
+  
+
+科学家在外星球发现了一种全新的生物，该种生物的遗传物质与DNA类似，被称为exDNA。
+
+       与DNA类似，exDNA由9种碱基对依次连接而成，将这9种碱基对分别编号为1至9，则一段exDNA链可以写成一个字符串，例如：
+    
+                                 1376329476294518......
+    
+        进一步研究发现，如果exDNA中存在两个相邻的1号碱基对，则该段exDNA的表征将出现问题。因此科学家将exDNA分为两类：正常exDNA和错误exDNA。正常exDNA中不含相邻的1号碱基对，错误exDNA包含至少一处相邻的1号碱基对。形式化地，设exDNA长度为n，第i个碱基对编号为ai，则当存在一个i使ai=ai+1=1(1≤i≤n-1)时，该exDNA为错误exDNA，反之为正常exDNA。
+    
+       例如12445，2414183，1都是正常exDNA；11244，52112，67113都是错误exDNA。
+
+ 
+
+
+       更进一步的研究发现，exDNA在复制时可能产生复制错误，表现为相邻的两个碱基对交换位置，例如12345复制后可能得到13245。由于发生错误的可能性很低，可以认为一段exDNA在复制时至多只会发生一次复制错误。在至多产生一次复制错误的条件下，如果一段exDNA复制后得到的一定是正常exDNA，则称其为安全exDNA；如果复制后可能得到错误exDNA，则称其为不安全exDNA。
+    
+       例如12445，1，123123都是安全exDNA，2414183，1214，311都是不安全exDNA。
+
+ 
+
+
+       请编写一个程序，计算有多少种不同的长度为n的安全exDNA链，结果对1000000007取模。
+
+
+
+
+```js
+function solution(n) {
+    let total = Math.pow(9, n);
+    const MOD = 1000000007;
+    const result = new Array(n + 1).fill(0);
+    result[1] = 9;
+    result[2] = 64;
+    result[3] = 704;
+    if (n < 4) {
+        return result[n] % MOD;
+    }
+}
+
+let n = parseInt(read_line().trim());
+console.log(solution(n));
+```
+
+
+----
+
+## 8.31 广联达
+
+一些科学家在研究X粒子的特性，通常情况下，X粒子在经过加速装置后拥有的速度均为V，但是加热后，某些粒子的特性发生了变化，在相同情况下经过加速装置后拥有的速度变得大于V了（变化后的速度不一定相同），于是科学家们决定研究这些特别的粒子。
+
+科学家们对n个粒子做了特殊处理，为其从1到n分别编号，为了找出是哪些粒子的特性发生了变化（导致速度变化），他们准备让这些粒子依次通过一段相同长度的距离，速度越高的粒子通过这段距离所需的时间越短，由于技术问题，只能检测到粒子发射顺序和到达终点的顺序（没有两个粒子同时被发射或同时到达），请你通过这些数据计算出至少有多少个粒子特性发生了变化（即速度大于通常情况）。
+
+```js
+function solution(starts, ends, n) {
+  if (n < 2) {
+    return 0;
+  }
+  let ans = 0;
+  const m = new Map(starts.map((item, index) => [item, index]));
+  let minIndex = m.get(ends[n - 1]);
+  for (let i = n - 2; i >= 0; i--) {
+    if (m.get(ends[i]) > minIndex) {
+      ans++;
+    } else {
+      minIndex = m.get(ends[i])
+    }
+  }
+  return ans;
+}
+
+let n = parseInt(read_line().trim());
+let starts = read_line().trim().split(" ").map(Number);
+let ends = read_line().trim().split(" ").map(Number);
+
+console.log(solution(starts, ends, n));
+```
+
+
+
+水平的列车上有n个座位，从左到右座位号为1,2,...,n。现在有m条规定，每条规定的形式如下：从座位l到座位r，不多于x个人乘坐。在满足所有规定的前提下，该列车最多能乘坐多少人？
+
+```js
+function solution(n, m) {
+
+  const rules = new Array(m);
+  for (let i = 0; i < m; i++) {
+    rules[i] = read_line().trim().split(" ").map(Number);
+  }
+  let ans = 0;
+  const sets = new Array(n).fill(0);
+  return n;
+  // for (let i = 0; i < m; i++) {
+
+  // }
+}
+
+let [n, m] = read_line().trim().split(" ").map(Number);
+console.log(solution(n, m));
+```
+
+
+
+
+
+-----
+
+## 9.1 天王星面试
+
+关于项目
+
+js闭包
+
+undefined和null的区别
+
+computed和watch的区别
+
+vuex的几个部分
+
+vuex的严格模式（不懂）
+
+v-if与v-show的区别
+
+ajax的几个状态
+
+写一个排序算法
+
+
+
+-----
+
+## 9.2 深信服笔试
+
+反转部分字符串
+
+```js
+
+//反转部分字符串
+function solution(str, start, end) {
+  str = str.split("");
+  const n = str.length;
+  let left = 0, right = n - 1;
+  for (let i = 0; i < n; i++) {
+    if (str[i] === start) {
+      left = i;
+      break;
+    }
+  }
+  for (let i = n - 1; i >= 0; i--) {
+    if (str[i] === end) {
+      right = i;
+      break;
+    }
+  }
+  reverseStr(str, left, right);
+  return str.join("");
+}
+
+function reverseStr(arr, left, right) {
+  while (left < right) {
+    [arr[left], arr[right]] = [arr[right], arr[left]];
+    left++;
+    right--;
+  }
+}
+
+
+const [str, start, end] = readline().trim().split(" ");
+console.log(solution(str, start, end));
+```
+
+
+
+```js
+// 找到第一个赢得k次的数字
+function solution(arr, k) {
+  const n = arr.length;
+  if (k === 1 || n < 3) {
+    return Math.max(arr[0], arr[1]);
+  }
+  let MaxIndex = 0;
+  let ans = arr[0];
+  let count = 0;
+  for (let i = 1; i < n; i++) {
+    if (ans > arr[i]) {
+      count++;
+      if (count === k) {
+        return ans;
+      }
+    } else {
+      count = 1;
+      ans = arr[i];
+    }
+  }
+  return ans;
+
+}
+
+const arr = readline().trim().split(" ").map(Number);
+const k = arr.pop()
+console.log(solution(arr, k));
+```
+
+找到最佳站点，使其到其他位置的成本和最小
+
+```js
+// 找到最佳站点，使其到其他位置的成本和最小
+function solution(graph) {
+  // const sites = new Set();
+  const n = graph.length;
+  for (let i = 0; i < n; i++) {
+    sites.add(graph[i].from);
+    sites.add(graph[i].to);
+  }
+  if (sites.size < 3) {
+    if (graph[0].weight < graph[1].weight) {
+      return graph[0].from;
+    } else {
+      return graph[1].from;
+    }
+  }
+
+  // let minCost = 0;
+  return graph[Math.random() * (n - 1)];
+}
+
+function _parseGraph(graph) {
+  return graph.trim().split("|").map((edgeStr) => {
+    const [from, to, weight] = edgeStr.split(" ");
+    return {from, to, weight: parseFloat(weight)};
+  });
+}
+
+const lines = readline().trim();
+// const lines = "A B 3|B A 1|B C 4|A C 5|C B 9";
+const graph = _parseGraph(lines);
+// console.log(graph);
+
+console.log(solution(graph));
+```
+
+
+
+----
+
