--- a/面试学习题目/前端面试_13_性能优化部分.md
+++ b/面试学习题目/前端面试_13_性能优化部分.md
@@ -1,10 +1,8 @@
-## 性能
+# 性能
 
 ---
 
-#### 3.1 前端性能优化手段
-
-**参考答案**：
+## 前端性能优化手段
 
 前端性能优化手段从以下几个方面入手：**加载优化**、**执行优化**、**渲染优化**、**样式优化**、**脚本优化**
 
@@ -20,7 +18,7 @@
 
 **解析**：
 
-**加载优化**
+### **加载优化**
 
 - 减少HTTP请求：尽量减少页面的请求数(首次加载同时请求数不能超过4个)，移动设备浏览器同时响应请求为4个请求(Android支持4个，iOS5+支持6个)
 
@@ -53,9 +51,7 @@
   - 可感知Loading：进入页面时Loading
   - 不可感知Loading：提前加载下一页
 
-- 压缩图像：使用图像时选择最合适的格式和大小，然后使用工具压缩，同时在代码中用srcset来按需显示(
-
-  过度压缩图像大小影响图像显示效果)
+- 压缩图像：使用图像时选择最合适的格式和大小，然后使用工具压缩，同时在代码中用srcset来按需显示(过度压缩图像大小影响图像显示效果)
 
   - 使用[TinyJpg](https://tinyjpg.com/)和[TinyPng](https://tinypng.com/)压缩图像
   - 使用CSS3、SVG、IconFont代替图像
@@ -63,21 +59,21 @@
   - 选择合适的图像：webp优于jpg，png8优于gif
   - 选择合适的大小：首次加载不大于1014kb、不宽于640px
   - PS切图时D端图像保存质量为80，M端图像保存质量为60
-
+  
 - 减少Cookie：Cookie会影响加载速度，静态资源域名不使用Cookie
 
 - 避免重定向：重定向会影响加载速度，在服务器正确设置避免重定向
 
 - 异步加载第三方资源：第三方资源不可控会影响页面的加载和显示，要异步加载第三方资源
 
-**执行优化**
+### **执行优化**
 
 - **CSS写在头部，JS写在尾部并异步**
 - **避免img、iframe等的src为空**：空src会重新加载当前页面，影响速度和效率
 - **尽量避免重置图像大小**：多次重置图像大小会引发图像的多次重绘，影响性能
 - **图像尽量避免使用DataURL**：DataURL图像没有使用图像的压缩算法，文件会变大，并且要解码后再渲染，加载慢耗时长
 
-**渲染优化**
+### **渲染优化**
 
 - **设置viewport**：HTML的viewport可加速页面的渲染
 
@@ -105,7 +101,7 @@
   - HTML标签：video、canvas、webgl
   - CSS属性：opacity、transform、transition
 
-**样式优化**
+### **样式优化**
 
 - **避免在HTML中书写style**
 - **避免CSS表达式**：CSS表达式的执行需跳出CSS树的渲染
@@ -125,7 +121,7 @@
   - 其它前缀为-webkit-、-moz-、-ms-、无前缀四种：Opera改用blink内核，-o-已淘汰
 - **避免让选择符看起来像正则表达式**：高级选择符执行耗时长且不易读懂，避免使用
 
-**脚本优化**
+### **脚本优化**
 
 - 减少重绘和回流
   - 避免不必要的DOM操作
@@ -341,7 +337,7 @@ $('.container').append(fragment)
 
 ---
 
-#### 3.3 尾调用优化
+## 3.3 尾调用优化
 
 **参考答案**：
 
