--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -1737,7 +1737,7 @@ var sleep = (delaytime = 1000) => {
 
 ----
 
-## 8.30 天王星量化面试
+## 8.30 天王星面试
 
 如何学习前端
 
@@ -1899,11 +1899,13 @@ while (T > 0) {
  
 
 
+
        更进一步的研究发现，exDNA在复制时可能产生复制错误，表现为相邻的两个碱基对交换位置，例如12345复制后可能得到13245。由于发生错误的可能性很低，可以认为一段exDNA在复制时至多只会发生一次复制错误。在至多产生一次复制错误的条件下，如果一段exDNA复制后得到的一定是正常exDNA，则称其为安全exDNA；如果复制后可能得到错误exDNA，则称其为不安全exDNA。
     
        例如12445，1，123123都是安全exDNA，2414183，1214，311都是不安全exDNA。
 
  
+
 
 
        请编写一个程序，计算有多少种不同的长度为n的安全exDNA链，结果对1000000007取模。
@@ -2015,7 +2017,7 @@ ajax的几个状态
 
 -----
 
-## 9.2 深信服笔试
+## 9.1 深信服笔试
 
 反转部分字符串
 
@@ -2129,3 +2131,175 @@ console.log(solution(graph));
 
 ----
 
+## 9.2 完美世界面试
+
+get与post
+
+http缓存
+
+css position属性
+
+ES6新特性
+
+箭头函数
+
+vue与react区别
+
+vue指令
+
+v-model与v-bind
+
+html里如何绑定事件
+
+
+
+----
+
+## 9.2 oppo笔试
+
+计算能构成多少直角三角形
+
+```js
+// 计算能构成多少直角三角形
+
+function solution(arr) {
+  const n = arr.length;
+  if (n < 2) {
+    return 0;
+  }
+  arr.sort((a, b) => a - b);
+  if (arr[0] <= 0) {
+    return 0;
+  }
+  let ans = 0;
+  for (let i = 0; i < n - 1; i++) {
+    if (i > 0 && arr[i] === arr[i - 1]) {
+      continue;
+    }
+    const a = arr[i] * arr[i];
+    for (let j = i; j < n - 1; j++) {
+      const b = arr[j] * arr[j];
+      for (let k = n - 1; k > j; k--) {
+        if (k < n - 1 && arr[k] === arr[k + 1]) {
+          continue;
+        }
+        const c = arr[k] * arr[k];
+        if (a + b === c) {
+          ans++;
+          break;
+        } else if (a + b > c){
+          break;
+        }
+      }
+    }
+  }
+  return ans;
+}
+const readline = require('readline');
+
+const rl = readline.createInterface({
+    input: process.stdin,
+    output: process.stdout
+});
+rl.on('line', function (line) {
+    const tokens = line.trim().split(" ").map(Number);
+    console.log(solution(tokens));
+});
+
+```
+
+
+
+转换变量名
+
+```js
+// 转换变量名
+
+function solution(str) {
+  const n = str.length;
+  if (/[A-Z]/.test(str[0])) {
+    return str;
+  }
+  const ans = [str[0]];
+  for (let i = 1; i < n; i++) {
+    if (/[A-Z]/.test(str[i])) {
+      if (str[i - 1] !== "_") {
+        ans.push("_");
+      }
+      let j = i + 1;
+      while (j < n && /[A-Z]/.test(str[j])) {
+        j++;
+      }
+      if (j > i + 1) {
+        ans.push((str.slice(i, j - 1) + "_" + str[j - 1]).toLowerCase());
+        i = j - 1;
+      } else {
+        ans.push(str[i].toLowerCase());
+      }
+    } else {
+      ans.push(str[i]);
+    }
+  }
+  return ans.join("");
+}
+
+// let str = "simple_HT_MLElement";
+// console.log(solution(str));
+
+// const readline = require('readline');
+
+// const rl = readline.createInterface({
+//     input: process.stdin,
+//     output: process.stdout
+// });
+// rl.on('line', function (line) {
+//     const tokens = line.trim();
+//     console.log(solution(tokens));
+// });
+
+console.log(/[a-zA-z]/.test("7-se"))
+```
+
+
+
+计算单词
+
+```js
+function solution(arr) {
+  if (arr.length < 1) {
+    return 0;
+  }
+  const n = arr.length;
+  let ans = 0;
+  for (let i = 0; i < n; i++) {
+    if (/[a-z]/.test(arr[i].toLowerCase())) {
+      if (!(/http[s]{0,1}:\/\/[a-z]{3}.[a-z]{1,}.[a-z]{1,}/.test(arr[i].toLowerCase()))) {
+        ans++;
+      }
+    }
+  }
+
+  return ans;
+}
+
+// let str = ["abhttps://ww", "23", "-", "ab2"]
+// console.log(solution(str));
+
+
+const readline = require('readline');
+const rl = readline.createInterface({
+    input: process.stdin,
+    output: process.stdout
+});
+rl.on('line', function (line) {
+    const tokens = line.trim().split(" ")
+    console.log(solution(tokens));
+});
+
+```
+
+
+
+----
+
+## 9.3
