--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -6263,4 +6263,305 @@ console.log(rob(nums));
 
 ----
 
-## [337. 打家劫舍 III](https://leetcode.cn/problems/house-robber-iii/)
+## 337. 打家劫舍 III
+
+小偷又发现了一个新的可行窃的地区。这个地区只有一个入口，我们称之为 root 。
+
+除了 root 之外，每栋房子有且只有一个“父“房子与之相连。一番侦察之后，聪明的小偷意识到“这个地方的所有房屋的排列类似于一棵二叉树”。 如果 两个直接相连的房子在同一天晚上被打劫 ，房屋将自动报警。
+
+给定二叉树的 root 。返回 在不触动警报的情况下 ，小偷能够盗取的最高金额 。
+
+#### 动态规划
+
+简化一下这个问题：一棵二叉树，树上的每个点都有对应的权值，每个点有两种状态（选中和不选中），问在不能同时选中有父子关系的点的情况下，能选中的点的最大权值和是多少。
+
+我们可以用 f(o)f(o) 表示选择 oo 节点的情况下，oo 节点的子树上被选择的节点的最大权值和；g(o)g(o) 表示不选择 oo 节点的情况下，oo 节点的子树上被选择的节点的最大权值和；ll 和 rr 代表 oo 的左右孩子。
+
+当 oo 被选中时，oo 的左右孩子都不能被选中，故 oo 被选中情况下子树上被选中点的最大权值和为 ll 和 rr 不被选中的最大权值和相加，即 f(o) = g(l) + g(r)f(o)=g(l)+g(r)。
+当 oo 不被选中时，oo 的左右孩子可以被选中，也可以不被选中。对于 oo 的某个具体的孩子 xx，它对 oo 的贡献是 xx 被选中和不被选中情况下权值和的较大值。故 g(o) = \max \{ f(l) , g(l)\}+\max\{ f(r) , g(r) \}g(o)=max{f(l),g(l)}+max{f(r),g(r)}。
+至此，我们可以用哈希表来存 ff 和 gg 的函数值，用深度优先搜索的办法后序遍历这棵二叉树，我们就可以得到每一个节点的 ff 和 gg。根节点的 ff 和 gg 的最大值就是我们要找的答案。
+
+```js
+var rob = function(root) {
+    const f = new Map();
+    const g = new Map();
+
+    const dfs = (node) => {
+        if (node === null) {
+            return;
+        }
+        dfs(node.left);
+        dfs(node.right);
+        f.set(node, node.val + (g.get(node.left) || 0) + (g.get(node.right) || 0));
+        g.set(node, Math.max(f.get(node.left) || 0, g.get(node.left) || 0) + Math.max(f.get(node.right) || 0, g.get(node.right) || 0));
+    }
+    
+    dfs(root);
+    return Math.max(f.get(root) || 0, g.get(root) || 0);
+};
+
+```
+
+假设二叉树的节点个数为 nn。
+
+我们可以看出，以上的算法对二叉树做了一次后序遍历，时间复杂度是 O(n)O(n)；由于递归会使用到栈空间，空间代价是 O(n)O(n)，哈希表的空间代价也是 O(n)O(n)，故空间复杂度也是 O(n)O(n)。
+
+我们可以做一个小小的优化，我们发现无论是 f(o)f(o) 还是 g(o)g(o)，他们最终的值只和 f(l)f(l)、g(l)g(l)、f(r)f(r)、g(r)g(r) 有关，所以对于每个节点，我们只关心它的孩子节点们的 ff 和 gg 是多少。我们可以设计一个结构，表示某个节点的 ff 和 gg 值，在每次递归返回的时候，都把这个点对应的 ff 和 gg 返回给上一级调用，这样可以省去哈希表的空间。
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number}
+ */
+var rob = function(root) {
+  const dfs = (node) => {
+    if (node === null) {
+      return [0, 0];
+    }
+    const l = dfs(node.left);
+    const r = dfs(node.right);
+    const selected = node.val + l[1] + r[1];
+    const notSelected = Math.max(l[0], l[1]) + Math.max(r[0], r[1]);
+    return [selected, notSelected];
+  }
+
+  const rootStatus = dfs(root);
+  return Math.max(rootStatus[0], rootStatus[1]);
+};
+```
+
+复杂度分析
+
+时间复杂度：O(n)O(n)。上文中已分析。
+
+空间复杂度：O(n)O(n)。虽然优化过的版本省去了哈希表的空间，但是栈空间的使用代价依旧是 O(n)O(n)，故空间复杂度不变。
+
+
+
+----
+
+## **BM80** **买卖股票的最好时机(一)**
+
+给定一个数组 prices ，它的第 i 个元素 prices[i] 表示一支给定股票第 i 天的价格。
+
+你只能选择 某一天 买入这只股票，并选择在 未来的某一个不同的日子 卖出该股票。设计一个算法来计算你所能获取的最大利润。
+
+返回你可以从这笔交易中获取的最大利润。如果你不能获取任何利润，返回 0 。
+
+#### 一次遍历
+
+显然，如果我们真的在买卖股票，我们肯定会想：如果我是在历史最低点买的股票就好了！太好了，在题目中，我们只要用一个变量记录一个历史最低价格 minprice，我们就可以假设自己的股票是在那天买的。那么我们在第 i 天卖出股票能得到的利润就是 prices[i] - minprice。
+
+因此，我们只需要遍历价格数组一遍，记录历史最低点，然后在每一天考虑这么一个问题：如果我是在历史最低点买进的，那么我今天卖出能赚多少钱？当考虑完所有天数之时，我们就得到了最好的答案。
+
+```js
+/**
+ * @param {number[]} prices
+ * @return {number}
+ */
+var maxProfit = function(prices) {
+  const n = prices.length;
+  if (n < 2) {
+    return 0;
+  }
+  let minP = prices[0];
+  let ans = 0;
+  for (let i = 1; i < n; i++) {
+    if (prices[i] < minP) {
+      minP = prices[i];
+    } else if (prices[i] - minP > ans) {
+      ans = prices[i] - minP;
+    }
+  }
+  return ans;
+};
+```
+
+
+
+----
+
+## **BM81** **买卖股票的最好时机(二)**
+
+给你一个整数数组 prices ，其中 prices[i] 表示某支股票第 i 天的价格。
+
+在每一天，你可以决定是否购买和/或出售股票。你在任何时候 最多 只能持有 一股 股票。你也可以先购买，然后在 同一天 出售。
+
+返回 你能获得的 最大 利润 。
+
+#### 动态规划
+
+![股票交易2动态规划](D:\project\学习笔记\image\niuke\股票交易2动态规划.png)
+
+```js
+/**
+ * @param {number[]} prices
+ * @return {number}
+ */
+var maxProfit = function(prices) {
+  const n = prices.length;
+  if (n < 2) {
+    return 0;
+  }
+  const dp = new Array(n).fill(0).map(() => new Array(2).fill(0));
+  dp[0][0] = 0, dp[0][1] = -prices[0];
+  for (let i = 1; i < n; i++) {
+    dp[i][0] = Math.max(dp[i - 1][0], dp[i - 1][1] + prices[i]);
+    dp[i][1] = Math.max(dp[i - 1][1], dp[i - 1][0] - prices[i]);
+  }
+  return dp[n - 1][0];
+};
+```
+
+注意到上面的状态转移方程中，每一天的状态只与前一天的状态有关，而与更早的状态都无关，因此我们不必存储这些无关的状态，只需要将 \textit{dp}[i-1][0]dp[i−1][0] 和 \textit{dp}[i-1][1]dp[i−1][1] 存放在两个变量中，通过它们计算出 \textit{dp}[i][0]dp[i][0] 和 \textit{dp}[i][1]dp[i][1] 并存回对应的变量，以便于第 i+1i+1 天的状态转移即可。
+
+```js
+var maxProfit = function(prices) {
+    const n = prices.length;
+    let dp0 = 0, dp1 = -prices[0];
+    for (let i = 1; i < n; ++i) {
+        let newDp0 = Math.max(dp0, dp1 + prices[i]);
+        let newDp1 = Math.max(dp1, dp0 - prices[i]);
+        dp0 = newDp0;
+        dp1 = newDp1;
+    }
+    return dp0;
+};
+```
+
+
+
+#### 贪心
+
+![股票交易2贪心](D:\project\学习笔记\image\niuke\股票交易2贪心.png)
+
+```js
+/**
+ * @param {number[]} prices
+ * @return {number}
+ */
+var maxProfit = function(prices) {
+  let ans = 0;
+  const n = prices.length;
+  for (let i = 1; i < n; i++) {
+    ans += Math.max(0, prices[i] - prices[i - 1]);
+  }
+  return ans;
+};
+```
+
+
+
+----
+
+## **BM82** **买卖股票的最好时机(三)**
+
+给定一个数组，它的第 i 个元素是一支给定的股票在第 i 天的价格。
+
+设计一个算法来计算你所能获取的最大利润。你最多可以完成 两笔 交易。
+
+注意：你不能同时参与多笔交易（你必须在再次购买前出售掉之前的股票）。
+
+#### 动态规划
+
+由于我们最多可以完成两笔交易，因此在任意一天结束之后，我们会处于以下五个状态中的一种：
+
+- 未进行过任何操作；
+
+- 只进行过一次买操作；
+
+- 进行了一次买操作和一次卖操作，即完成了一笔交易；
+
+- 在完成了一笔交易的前提下，进行了第二次买操作；
+
+- 完成了全部两笔交易。
+
+
+作者：LeetCode-Solution
+链接：https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-iii/solution/mai-mai-gu-piao-de-zui-jia-shi-ji-iii-by-wrnt/
+
+```js
+/**
+ * @param {number[]} prices
+ * @return {number}
+ */
+var maxProfit = function(prices) {
+  const n = prices.length;
+  let buy1 = -prices[0], buy2 = -prices[0];
+  let sell1 = 0, sell2= 0;
+  for (let i = 1; i < n; i++) {
+    buy1 = Math.max(buy1, -prices[i]);
+    sell1 = Math.max(sell1, buy1 + prices[i]);
+    buy2 = Math.max(buy2, sell1 - prices[i]);
+    sell2 = Math.max(sell2, buy2 + prices[i]);
+  }
+  return sell2;
+};
+
+let prices = [3,3,5,0,0,3,1,4];
+console.log(maxProfit(prices));
+```
+
+
+
+-----
+
+## 188. 买卖股票的最佳时机 IV
+
+给定一个整数数组 prices ，它的第 i 个元素 prices[i] 是一支给定的股票在第 i 天的价格。
+
+设计一个算法来计算你所能获取的最大利润。你最多可以完成 k 笔交易。
+
+注意：你不能同时参与多笔交易（你必须在再次购买前出售掉之前的股票）。
+
+ 与其余的股票问题类似，我们使用一系列变量存储「买入」的状态，再用一系列变量存储「卖出」的状态，通过动态规划的方法即可解决本题。
+
+我们用 \textit{buy}[i][j]buy[i][j] 表示对于数组 \textit{prices}[0..i]prices[0..i] 中的价格而言，进行恰好 jj 笔交易，并且当前手上持有一支股票，这种情况下的最大利润；用 \textit{sell}[i][j]sell[i][j] 表示恰好进行 jj 笔交易，并且当前手上不持有股票，这种情况下的最大利润。
+
+作者：LeetCode-Solution
+链接：https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-iv/solution/mai-mai-gu-piao-de-zui-jia-shi-ji-iv-by-8xtkp/
+
+```js
+var maxProfit = function(k, prices) {
+    if (!prices.length) {
+        return 0;
+    }
+
+    const n = prices.length;
+    k = Math.min(k, Math.floor(n / 2));
+    const buy = new Array(n).fill(0).map(() => new Array(k + 1).fill(0));
+    const sell = new Array(n).fill(0).map(() => new Array(k + 1).fill(0));
+
+    buy[0][0] = -prices[0];
+    sell[0][0] = 0;
+    for (let i = 1; i <= k; ++i) {
+        buy[0][i] = sell[0][i] = -Number.MAX_VALUE;
+    }
+
+    for (let i = 1; i < n; ++i) {
+        buy[i][0] = Math.max(buy[i - 1][0], sell[i - 1][0] - prices[i]);
+        for (let j = 1; j <= k; ++j) {
+            buy[i][j] = Math.max(buy[i - 1][j], sell[i - 1][j] - prices[i]);
+            sell[i][j] = Math.max(sell[i - 1][j], buy[i - 1][j - 1] + prices[i]);   
+        }
+    }
+
+    return Math.max(...sell[n - 1]);
+};
+
+
+```
+
+
+
+----
+
+## **BM83** **字符串变形**
