--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -1900,11 +1900,13 @@ while (T > 0) {
 
 
 
+
        更进一步的研究发现，exDNA在复制时可能产生复制错误，表现为相邻的两个碱基对交换位置，例如12345复制后可能得到13245。由于发生错误的可能性很低，可以认为一段exDNA在复制时至多只会发生一次复制错误。在至多产生一次复制错误的条件下，如果一段exDNA复制后得到的一定是正常exDNA，则称其为安全exDNA；如果复制后可能得到错误exDNA，则称其为不安全exDNA。
     
        例如12445，1，123123都是安全exDNA，2414183，1214，311都是不安全exDNA。
 
  
+
 
 
 
@@ -2302,4 +2304,33 @@ rl.on('line', function (line) {
 
 ----
 
-## 9.3
+## 9.3 猿辅导面试
+
+项目中的问题
+
+常见状态码
+
+网络层，协议
+
+token鉴权
+
+
+
+实现一个函数打印hello后，执行函数三次后不再打印
+
+```
+
+```
+
+实现红绿灯
+
+```
+red 3 ,yellow 1, green 2
+```
+
+
+
+
+
+----
+
