--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -6565,3 +6565,45 @@ var maxProfit = function(k, prices) {
 ----
 
 ## **BM83** **字符串变形**
+
+对于一个长度为 n 字符串，我们需要对它做一些变形。
+
+首先这个字符串中包含着一些空格，就像"Hello World"一样，然后我们要做的是把这个字符串中由空格隔开的单词反序，同时反转每个字符的大小写。
+
+比如"Hello World"变形后就变成了"wORLD hELLO"。
+
+数据范围: 1\le n \le 10^61≤*n*≤106 , 字符串中包括大写英文字母、小写英文字母、空格。
+
+进阶：空间复杂度 O(n)*O*(*n*) ， 时间复杂度 O(n)*O*(*n*)
+
+```js
+function trans(s, n){
+    //write code here
+    s = s.split(" ").reverse();
+    const m = s.length;
+    const ans = [];
+    for (let i = 0; i < m; i++) {
+        for (let ch of s[i]) {
+            if(/[a-z]/.test(ch)) {
+                ans.push(ch.toUpperCase());
+            } else {
+                ans.push(ch.toLowerCase());
+            }
+        }
+        if (i < m - 1) {
+            ans.push(" ");
+        }
+    }
+    return ans.join("")
+}
+
+module.exports = {
+    trans : trans
+}
+```
+
+
+
+----
+
+## **BM84** **最长公共前缀**
